# peoples-api

./: README.md  pyproject.toml
app/: __init__.py
app/controllers/: franchisor_controller.py  peoples_controller.py
app/database/: Database.py  app.db
app/database/migrations/versions/: d9bdee640b78_.py
app/entities/: franchisor_entity.py  people_entity.py
app/errors/: __init__.py
app/services/franchisor/: create_franchisor.py  delete_franchisor.py  get_franchisor.py  update_franchisor.py
app/services/people/: create_people.py  delete_people.py  get_people.py  update_people.py
app/templates/: franchisor.html  pagination.html  people.html
app/templates/layout/: layout.html
app/templates/table/: franchisor_table.html  people_table.html
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.svelte  routes.js
frontend/src/components/: Pagination.svelte
frontend/src/components/Buttons/: ButtonNewFranchisor.svelte  ButtonNewPeople.svelte
frontend/src/components/Input/: Input.svelte
frontend/src/components/Tables/: FranchisorTable.svelte  PeopleTable.svelte
frontend/src/pages/: EditFranchisor.svelte  Franchisor.svelte  Home.svelte  NewFranchisor.svelte  NewPeople.svelte  People.svelte
frontend/src/services/: api.js
